# giffy

./: CHANGELOG.md  README.md  package.json  tsconfig.json  vite.config.js
.github/workflows/: release.yml
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: GifResults.svelte  PoweredByTenor.svelte
src/lib/: constants.ts  types.ts
src/stores/: search.ts
