[package]
name = "giffy"
version = "0.4.0"
description = "Desktop application that lets you find GIFs on the web easily, without having to hunt for them manually."
authors = ["Akash Rajpurohit"]
license = "MIT"
repository = ""
default-run = "giffy"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0", features = ["clipboard-all", "dialog-all", "global-shortcut-all", "shell-open", "system-tray"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
